--- a/style.css
+++ b/style.css
@@ -210,27 +210,15 @@ nav a:hover {
 .universo-section {
     padding: 40px 20px;
     max-width: 1100px;
-    margin: auto;
-}
-
-.universo-section h2 {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 15px;
-}
-
-.universo-intro {
-    text-align: center;
-    max-width: 800px;
-    margin: 0 auto 40px auto;
-    line-height: 1.6;
+    height: 200px;
+    margin: 0 auto;
 }
 
 /* LISTA HORIZONTAL */
 .universo-list {
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 30px;
 }
 
 /* ITEM */
@@ -250,13 +238,13 @@ nav a:hover {
 
 /* IMAGEM À ESQUERDA */
 .universo-item img {
-    width: 180px;
-    height: 140px;
+    width: 20%;
     object-fit: cover;
 }   
 
 /* TEXTO À DIREITA */
 .universo-texto {
+    width: 100%;
     padding: 15px 20px;
     display: flex;
     flex-direction: column;
@@ -276,18 +264,22 @@ nav a:hover {
 }
 
 /* RESPONSIVO */
-@media (max-width: 600px) {
+@media (max-width: 500px) {
     .universo-item {
-        flex-direction: column;
+        display: flex;
+        flex-direction: column; 
         text-align: center;
     }
 
     .universo-item img {
         width: 100%;
-        height: 180px;
+        height: 100%;
+        
     }
 
     .universo-texto {
         padding: 15px;
+        text-align: center;
     }
 }
+
