--- a/home.css
+++ b/home.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     background-color: #0D0D0D;
     padding: 20px;
 }
@@ -53,6 +53,76 @@ nav a:hover {
 }
 
 
+/* fazendo menu de hamburguer para telas menores */
+
+
+.menu-toggle {
+    display: none;
+}
+
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background: white;
+    transition: 0.3s;
+}
+
+
+@media (max-width: 700px) {
+
+
+    .hamburger {
+        display: block;
+        z-index: 10;
+    }
+
+    .nav-menu {
+        position: fixed;
+        top: 70px;
+        left: -100%;
+        width: 100%;
+        background: #000000 ;
+        flex-direction: column;
+        padding: 20px 0;
+        text-align: center;
+        transition: 0.3s ease;
+        gap: 15px;
+    }
+
+
+    .menu-toggle:checked ~ .nav-menu {
+        left: 0;
+    }
+
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+}
+
 
 
 /* parte do corpo do site */
@@ -60,26 +130,50 @@ nav a:hover {
 .content {
     display: flex;
     flex-direction: row;
+    height: 100vh;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-    gap: 50px;
 }
 
 .title {
     display: flex;
+    width: 100%;
     margin-left: 100px;
-    margin-right: 200px;
     justify-content: left;
+    align-items: center;
 }
 
 .title h1 {
     font-family: "Benton";
-    font-size: 10em;
+    font-size: 10rem;
     color: #000000e5;
     
 }
 
 #imagem img {
+    width: 600px;
     margin-right: 100px;
+}
+
+@media (max-width: 1200px) {
+    .content {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 100px;}
+
+    .title {
+        margin-top: 100px;
+        margin-left: 0px;
+        margin-right: 0px;
+        justify-content: center;
+    }
+    .title h1 {
+        font-size: 8rem;
+    }
+    #imagem img {
+        margin-right: 0px;
+        width: 25rem;
+    }
 }
