--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ nav a:hover {
     text-decoration: underline;
 }
 
+/* fazendo menu de hamburguer para telas menores */
+
+
+
 /* parte do corpo do site  */
 
 .content {
@@ -81,7 +85,6 @@ nav a:hover {
 }
 
 .title p {
-    margin-left: 10px;
     font-size: 24px;
     color: #000000e5;
 }
@@ -97,7 +100,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
 }
 
@@ -214,14 +217,14 @@ nav a:hover {
     margin: 0 auto;
 }
 
-/* LISTA HORIZONTAL */
+/* lista horizontal */
 .universo-list {
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
-/* ITEM */
+/* item */
 .universo-item {
     display: flex;
     background: #111;
@@ -236,13 +239,13 @@ nav a:hover {
     transform: translateY(-4px);
 }
 
-/* IMAGEM À ESQUERDA */
+
 .universo-item img {
     width: 20%;
     object-fit: cover;
 }   
 
-/* TEXTO À DIREITA */
+
 .universo-texto {
     width: 100%;
     padding: 15px 20px;
@@ -263,7 +266,7 @@ nav a:hover {
     line-height: 1.4;
 }
 
-/* RESPONSIVO */
+/* responsivo */
 @media (max-width: 500px) {
     .universo-item {
         display: flex;
