--- a/style.css
+++ b/style.css
@@ -56,6 +56,73 @@ nav a:hover {
 
 /* fazendo menu de hamburguer para telas menores */
 
+.menu-toggle {
+    display: none;
+}
+
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    background: white;
+    transition: 0.3s;
+}
+
+
+@media (max-width: 700px) {
+
+
+    .hamburger {
+        display: block;
+        z-index: 10;
+    }
+
+    .nav-menu {
+        position: fixed;
+        top: 70px;
+        left: -100%;
+        width: 100%;
+        background: #000000 ;
+        flex-direction: column;
+        padding: 20px 0;
+        text-align: center;
+        transition: 0.3s ease;
+        gap: 15px;
+    }
+
+
+    .menu-toggle:checked ~ .nav-menu {
+        left: 0;
+    }
+
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle:checked + .hamburger .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+}
+
 
 
 /* parte do corpo do site  */
@@ -64,20 +131,16 @@ nav a:hover {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
     gap: 50px;
 }
 
 .title {
-    display: grid;
-    margin-left: 100px;
-    margin-right: 200px;   
+    display: grid;  
     justify-content: left;
 
 }
 
 .title h1 {
-    margin-top: 100px;
     font-family: "Benton";
     font-size: 10em;
     color: #000000e5;
@@ -89,26 +152,31 @@ nav a:hover {
     color: #000000e5;
 }
 
-#imagem img {
-    
-    margin-right: 100px;
-}
 
+main{
+    padding: 40px 20px;
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-top:100px
+}
 .textAlign {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin-top: 100px;
     margin-bottom: 50px;
 }
 
 .textAlign h2 {
-    font-size: 7em;
+    font-size: 6em;
     font-family: "Benton";
     color: #000000e5;
     margin-bottom: 30px;
+}
+
+.about {
+    padding: 1.5rem 0;
 }
 
 #frames {
@@ -147,6 +215,46 @@ nav a:hover {
     border-radius: 10px;
 }
 
+@media (max-width: 1100px) {
+    .content {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0;
+    }
+
+    .title {
+        margin-top: 10px;
+        margin-left: 0px;
+        margin-right: 0px;   
+        justify-content: center;
+        text-align: center;
+
+    }
+
+    .title h1 {
+        font-size: 8rem;
+    }
+
+    .textAlign {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .textAlign h2 {
+       font-size: 3rem;
+    }
+
+    #imagem img  {
+        width: 25rem;
+    }
+
+    #frames {
+        flex-direction: column;
+        gap: 50px;
+    }
+}
+
 /* códido da página dos vilões  */
 
 .contentPag3 {
@@ -173,6 +281,7 @@ nav a:hover {
 
 .boxVilao {
     display: flex;
+    flex-wrap: wrap;
     gap: 25px;
     align-items: center;
     justify-content: center;
@@ -211,7 +320,7 @@ nav a:hover {
 
 
 .universo-section {
-    padding: 40px 20px;
+
     max-width: 1100px;
     height: 200px;
     margin: 0 auto;
