--- a/home.css
+++ b/home.css
@@ -11,13 +11,13 @@
 
 @font-face {
     font-family: "Benton";
-    src: url(/BentonSans\ Comp\ Black.otf);
+    src: url(BentonSans\ Comp\ Black.otf);
 }
 
 
 body { 
     font-family: myriad pro, sans-serif;
-    background-image: url(/imgs/imgsSite/BG.png);
+    background-image: url(imgs/imgsSite/BG.png);
     background-size: 100%;
     display: flex;
     flex-direction: column;
