--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@
 
 @font-face {
     font-family: "Benton";
-    src: url(/BentonSans\ Comp\ Black.otf);
+    src: url(BentonSans\ Comp\ Black.otf);
 }
 
 
 body { 
     font-family: myriad pro, sans-serif;
     /* background-image: url(/imgs/imgsSite/BG.png);*/
-    background: linear-gradient(rgba(255,255,255,0.7), rgba(255, 255, 255, 0.7)), url("/imgs/imgsSite/BG.png");
+    background: linear-gradient(rgba(255,255,255,0.7), rgba(255, 255, 255, 0.7)), url("imgs/imgsSite/BG.png");
     background-size: 100%;
     display: flex;
     flex-direction: column;
