--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@
 body { 
     font-family: myriad pro, sans-serif;
     /* background-image: url(/imgs/imgsSite/BG.png);*/
-    background: linear-gradient(rgba(255,255,255,0.7), rgba(255, 255, 255, 0.7)), url("imgs/imgsSite/BG.png");
+    background: linear-gradient(rgba(255,255,255,0.7), rgba(255, 255, 255, 0.7)), url(imgs/imgsSite/BG.png);
     background-size: 100%;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    
+
 }
 
 /* código do cabeçalho */
